--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: "3"
+version: "3.8"
 services:
-  app:
-    build:
-      context: ./docker/php
+  composer:
+    image: composer:2.0
     volumes:
-      - .:/work
-    working_dir: /work
+      - .:/app
+
+  app:
+    image: php:8.0-cli
+    volumes:
+      - .:/app
+    working_dir: /app
